# onprem-llm-rag

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.md  README.md  SERVICES_README.md  UPGRADE_SUMMARY.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  start_service.sh  test_all_services.sh
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 20260216_0001_init_onprem_rag_schema.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
config/: redis.conf  vllm_config.yaml
database/: README.md  init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
services/chunking/: Dockerfile  chunking_service.py  requirements.txt
services/embedding/: Dockerfile  embedding_service.py  requirements.txt
services/ocr/: Dockerfile  ocr_service.py  requirements.txt
services/reranker/: Dockerfile  requirements.txt  reranker_service.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  device.py  fastapi_utils.py  logging.py  models.py  service_client.py
tests/: conftest.py  pytest.ini
tests/integration/: test_document_pipeline.py  test_health_endpoints.py
tests/unit/: test_chunking_service.py  test_rag_service.py  test_reranker_service.py  test_shared_config.py  test_shared_logging.py
vllm/: Dockerfile.1gpu  Dockerfile.2gpu  Dockerfile.4gpu  entrypoint.sh
worker/: Dockerfile  celery_app.py  requirements.txt
(+25 files in other folders)
